Fixed 1. Line height in list page > 2. Fixed header in list page > 3. Row gap in services offered details page > 4. Services offered clikable with wa 5. Fixed loader in details page

--- a/src/pages/detailsPage/detailsPage.styles.scss
+++ b/src/pages/detailsPage/detailsPage.styles.scss
@@ -193,7 +193,7 @@
         &-list {
           display: grid;
           grid-template-columns: repeat(2, 170px);
-          row-gap: 10px;
+          row-gap: 25px;
 
           li {
             width: initial;
@@ -204,6 +204,7 @@
             display: grid;
             grid-template-columns: 1fr 4.5fr;
             column-gap: 10px;
+            cursor: pointer;
 
             img {
               width: 30px;
